fix: map overlap

--- a/covid-dashboard/src/js/keyboard/style.scss
+++ b/covid-dashboard/src/js/keyboard/style.scss
@@ -3,6 +3,7 @@
   overflow: hidden;
   
   .keyboard {
+    z-index: 1000;
     position: fixed;
     bottom: 0;
     left: 50%;
